syntax = "proto3";

package booking;

// Define the BookingService with RPC methods for CRUD operations
service BookingService {
  rpc CreateBooking (CreateBookingRequest) returns (BookingResponse); // Create a new booking
  rpc GetBooking (GetBookingRequest) returns (BookingResponse); // Get details of a booking by ID
  rpc UpdateBooking (UpdateBookingRequest) returns (BookingResponse); // Update booking details by ID
  rpc DeleteBooking (DeleteBookingRequest) returns (BookingResponse); // Delete a booking by ID
}

// Request message for creating a booking
message CreateBookingRequest {
  string userId = 1;
  string flightId = 2;
  string hotelId = 3;
}

// Request message for getting a booking by ID
message GetBookingRequest {
  string id = 1;
}

// Request message for updating a booking
message UpdateBookingRequest {
  string id = 1;
  string userId = 2;
  string flightId = 3;
  string hotelId = 4;
}

// Request message for deleting a booking
message DeleteBookingRequest {
  string id = 1;
}

// Response message containing booking details
message BookingResponse {
  string id = 1;
  string userId = 2;
  string flightId = 3;
  string hotelId = 4;
}
